deployment/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    com.theguardian.app: Multimedia
    com.theguardian.stack: FibreCensus
    com.theguardian.stage: CODE
    com.theguardian.service: elasticsearch
  name: fc-es-cluster
spec:
  type: ClusterIP
  ports:
  - name: "9300"
    port: 9300
    targetPort: 9300
  publishNotReadyAddresses: true
  selector:
    com.theguardian.app: Multimedia
    com.theguardian.stack: FibreCensus
    com.theguardian.stage: CODE
    com.theguardian.service: elasticsearch
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    com.theguardian.app: Multimedia
    com.theguardian.stack: FibreCensus
    com.theguardian.stage: CODE
    com.theguardian.service: elasticsearch
  name: fc-elasticsearch
spec:
  type: ClusterIP
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  selector:
    com.theguardian.app: Multimedia
    com.theguardian.stack: FibreCensus
    com.theguardian.stage: CODE
    com.theguardian.service: elasticsearch
status:
  loadBalancer: {}
