deployment/fibrecensus-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    com.theguardian.app: Multimedia
    com.theguardian.stack: FibreCensus
    com.theguardian.stage: PROD
    com.theguardian.service: webapp
  name: fibrecensus-prod-webapp
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    com.theguardian.app: Multimedia
    com.theguardian.stack: FibreCensus
    com.theguardian.stage: PROD
    com.theguardian.service: webapp
