deployment/fibrecensus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fibrecensus-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - fibrecensus.gnm.int
    secretName: fibrecensus-certs
  rules:
  - host: fibrecensus.gnm.int
    http:
      paths:
      - path: /
        backend:
          serviceName: fibrecensus-prod-webapp
          servicePort: 9000
